# superline

./: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  example_config.json
.github/workflows/: ci.yml
docs/: powershell-testing.md
src/: config.rs  modules.rs  powerline.rs  themes.rs
src/modules/: error_message.rs  git.rs  unknown.rs
src/themes/: custom.rs  rainbow.rs  simple.rs
tests/: error_handling.rs
